fixed threat going up by too much after game reset multiple times

--- a/src/AppBundle/Resources/public/css/style.scss
+++ b/src/AppBundle/Resources/public/css/style.scss
@@ -2219,6 +2219,14 @@ h1.nightmare, h1.easy {
   top: 50%;
 }
 
+.btn-header-value-up {
+  top: 0%;
+}
+
+.btn-header-value-dn {
+  top: 50%;
+}
+
 .btn-value:hover {
   opacity: 0.2;
   background-color: black;
